--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,8 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
+    sampleFileFormat           = "V1"
+    sequencingType             = "WGS"  //"WGS" for whole genome, "WES" for whole exome
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
@@ -188,7 +190,7 @@ singularity.registry = 'quay.io'
 
 // Nextflow plugins
 plugins {
-    id 'nf-validation@1.1.3' // Validation of pipeline parameters and creation of an input channel from a sample sheet
+    id 'nf-schema@2.0.0'
 }
 
 // Load igenomes.config if required
