--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,8 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
+    sampleFileFormat           = "V1"
+    sequencingType             = "WGS"  //"WGS" for whole genome, "WES" for whole exome
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
