Update nf-validation to nf-schema However, I obtain strange errors with the schema, the newest version causes error with lint, and the older version conflicts with nf-schema. I'm unsure if the benefits of updating are worth the trouble of the conflicts

--- a/nextflow.config
+++ b/nextflow.config
@@ -51,9 +51,13 @@ params {
     max_time                   = '240.h'
 
     // Schema validation default options
+    validation.failUnrecognisedParams = false
     validationFailUnrecognisedParams = false
+    validation.lenientMode            = false
     validationLenientMode            = false
+    validation.ignoreParams     = 'genomes,igenomes_base'
     validationSchemaIgnoreParams     = 'genomes,igenomes_base'
+    validation.showHiddenParams       = false
     validationShowHiddenParams       = false
     validate_params                  = true
 
@@ -188,7 +192,7 @@ singularity.registry = 'quay.io'
 
 // Nextflow plugins
 plugins {
-    id 'nf-validation@1.1.3' // Validation of pipeline parameters and creation of an input channel from a sample sheet
+    id 'nf-schema@2.0.0'
 }
 
 // Load igenomes.config if required
