--- a/conf/test.config
+++ b/conf/test.config
@@ -22,7 +22,8 @@ params {
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = params.pipelines_testdata_base_path + 'viralrecon/samplesheet/samplesheet_test_illumina_amplicon.csv'
+    input  = "assets/TestSampleSheet.tsv"
+    //vep_cache= params.pipelines_testdata_base_path + '/data/genomics/homo_sapiens/genome/vep.tar.gz'
 
     // Genome references
     genome = 'R64-1-1'
