Refactor: Removed .devcontainer and .dockstore Also added some caveats to contribution and PR template file
Ignored some lint tests for modified or removed files

--- a/.github/workflows/linting_comment.yml
+++ b/.github/workflows/linting_comment.yml
@@ -1,7 +1,8 @@
 name: nf-core linting comment
 # This workflow is triggered after the linting action is complete
 # It posts an automated comment to the PR, even if the PR is coming from a fork
-
+permissions:
+  pull-requests: write
 on:
   workflow_run:
     workflows: ["nf-core linting"]
