--- a/nextflow.config
+++ b/nextflow.config
@@ -12,8 +12,6 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
-    sampleFileFormat           = "V1"
-    sequencingType             = "WGS"  //"WGS" for whole genome, "WES" for whole exome
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
@@ -241,7 +239,7 @@ manifest {
     description     = """Variant analysis for genome and exome GVCFs"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version         = '1.0dev'
+    version         = '1.0.1'
     doi             = ''
 }
 
