feat: Added all params, modules and function Everything needed to run the pipeline normally should be set. However, I had to undo some changes such as the initialisation workflow, which produces multi-mapped channel that are incompatible with the rest of our functions.
Fix: Added containers download to config
Also removed actions on repo download

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,36 @@ params {
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
     igenomes_ignore            = false
+    sequencingType = "WGS" //We might lose this parameter later because we use V2, 
+                            //however it is used right now to decide whether to use VQSR or hard-filtering
+    referenceGenome = null
+    referenceGenomeFasta = null
+    broad = null
+    vepCache = null
+    intervalsFile = null
+
+
+	//Process-specific parameters
+    TSfilterSNP = '99.0'
+    TSfilterINDEL = '99.0'
+    hardFilters = [[name: 'QD2', expression: 'QD < 2.0'],
+		   [name: 'QD1', expression: 'QD < 1.0'],
+                   [name: 'QUAL30', expression: 'QUAL < 30.0'],
+                   [name: 'SOR3', expression: 'SOR > 3.0'],
+                   [name: 'FS60', expression: 'FS > 60.0'],
+                   [name: 'MQ40', expression: 'MQ < 40.0'],
+                   [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
+                   [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
+	
+	//Resources options
+	//defaults expecting to be overwritten
+	vepCpu = 4
+	max_cpus = 16
+	max_disk = 80.GB
+	max_time = 12.h
+	max_memory = 120.GB
+
+
 
     // MultiQC options
     multiqc_config             = null
@@ -44,11 +74,6 @@ params {
     config_profile_contact     = null
     config_profile_url         = null
 
-    // Max resource options
-    // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
-    max_cpus                   = 16
-    max_time                   = '240.h'
 
     // Schema validation default options
     validationFailUnrecognisedParams = false
@@ -208,43 +233,86 @@ env {
     JULIA_DEPOT_PATH = "/usr/local/share/julia"
 }
 
-// Capture exit codes from upstream processes when piping
-process.shell = ['/bin/bash', '-euo', 'pipefail']
+process {
+  disk = 40.GB
+	withName: 'excludeMNPs|splitMultiAllelics' {
+		container = 'staphb/bcftools:1.19'
+	}
+	withName: 'importGVCF|genotypeGVCF_multi|genotypeGVCF_solo|genotypeGVCF|variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|hardFiltering|gatherVCF' {
+		container = 'broadinstitute/gatk:4.5.0.0'
+	}
+	withName: vep {
+		container = 'ensemblorg/ensembl-vep:release_111.0'
+	}
+	withName: tabix {
+		container = 'staphb/htslib:1.19'
+	}
 
-// Disable process selector warnings by default. Use debug profile to enable warnings.
-nextflow.enable.configProcessNamesValidation = false
-
-def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
-timeline {
-    enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
+	withName: 'excludeMNPs' {
+		errorStrategy = 'retry'
+		maxRetries = 1
+		cpus	=	{ check_max( 2 		* task.attempt, 'cpus' 		) 	}
+		memory	=	{ check_max( 16.GB 	* task.attempt, 'memory'	) 	}
+		disk	=	{ check_max( 50.GB 	* task.attempt, 'disk' 		)	}
+		time	=	{ check_max( 8.h  	* task.attempt, 'time' 		)	}
+	}
+	withName: 'importGVCF' {
+		errorStrategy = 'retry'
+		maxRetries = 1
+		cpus	=	{ check_max( 4		* task.attempt, 'cpus'		) 	}
+		memory	=	{ check_max( 16.GB	* task.attempt, 'memory'	) 	}
+		disk	=	{ check_max( 80.GB	* task.attempt, 'disk'		)	}
+		time	=	{ check_max( 8.h	* task.attempt, 'time'		)	}
+	}
+	withName: 'genotypeGVCF' {
+		errorStrategy = 'retry'
+		maxRetries = 2
+		cpus	=	{ check_max( 2		* task.attempt, 'cpus' 		) 	}
+		memory	=	{ check_max( 14.GB	* task.attempt, 'memory' 	) 	}
+		disk	=	{ check_max( 40.GB	* task.attempt, 'disk' 		)	}
+		time	=	{ check_max( 8.h	* task.attempt, 'time' 		)	}
+	}
+	withName: 'variantRecalibrator.*|apply.*' {
+		errorStrategy = 'retry'
+		maxRetries = 2
+		cpus	=	{ check_max( 2		* task.attempt, 'cpus'		) 	}
+		memory	=	{ check_max( 14.GB	* task.attempt, 'memory'	)	}
+		disk	=	{ check_max( 30.GB	* task.attempt, 'disk'		)	}
+		time	=	{ check_max( 10.h	* task.attempt, 'time'		)	}
+	}
+	withName: 'splitMultiAllelics' {
+		errorStrategy = 'retry'
+		maxRetries = 2
+		cpus	=	{ check_max( 2		* task.attempt, 'cpus'		) 	}
+		memory	=	{ check_max( 14.GB	* task.attempt, 'memory'	)	}
+		disk	=	{ check_max( 30.GB	* task.attempt, 'disk'		)	}
+		time	=	{ check_max( 10.h	* task.attempt, 'time'		)	}
+	}
+  	withName: 'hardFiltering' {
+		errorStrategy = 'retry'
+		maxRetries = 2
+		cpus	=	{ check_max( 2		* task.attempt, 'cpus'		) 	}
+		memory	=	{ check_max( 14.GB	* task.attempt, 'memory'	)	}
+		disk	=	{ check_max( 30.GB	* task.attempt, 'disk'		)	}
+		time	=	{ check_max( 10.h	* task.attempt, 'time'		)	}
+	}
+	withName: 'tabix' {
+		errorStrategy = 'retry'
+		maxRetries = 2
+		cpus	=	{ check_max( 2		* task.attempt, 'cpus'		) 	}
+		memory	=	{ check_max( 14.GB	* task.attempt, 'memory'	)	}
+		disk	=	{ check_max( 30.GB	* task.attempt, 'disk'		)	}
+		time	=	{ check_max( 10.h	* task.attempt, 'time'		)	}
+	}
+	withName: 'vep' {
+		errorStrategy = 'retry'
+		maxRetries = 2
+		cpus	=	{ check_max( 4 		* task.attempt, 'cpus'		)	}
+		memory	=	{ check_max( 16.GB	* task.attempt, 'memory'	)	}
+		disk	=	{ check_max( 80.GB	* task.attempt, 'disk'		)	}
+		time	=	{ check_max( 10.h 	* task.attempt, 'time'		)	}
+	}
 }
-report {
-    enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_report_${trace_timestamp}.html"
-}
-trace {
-    enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_trace_${trace_timestamp}.txt"
-}
-dag {
-    enabled = true
-    file    = "${params.outdir}/pipeline_info/pipeline_dag_${trace_timestamp}.html"
-}
-
-manifest {
-    name            = 'ferlab/postprocessing'
-    author          = """Damien Geneste, David Morais, Felix-Antoine Le Sieur, Jeremy Costanza, Lysiane Bouchard"""
-    homePage        = 'https://github.com/ferlab/postprocessing'
-    description     = """Variant analysis for genome and exome GVCFs"""
-    mainScript      = 'main.nf'
-    nextflowVersion = '!>=23.04.0'
-    version         = '1.0.2'
-    doi             = ''
-}
-
-// Load modules.config for DSL2 module specific options
-includeConfig 'conf/modules.config'
 
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
@@ -277,4 +345,53 @@ def check_max(obj, type) {
             return obj
         }
     }
+	else if (type == 'disk') {
+        try {
+            if (obj.compareTo(params.max_disk as nextflow.util.MemoryUnit) == 1)
+                return params.max_disk as nextflow.util.MemoryUnit
+            else
+                return obj
+        } catch (all) {
+            println "   ### ERROR ###   Max disk '${params.max_disk}' is not valid! Using default value: $obj"
+            return obj
+        }
+    }
 }
+
+// Capture exit codes from upstream processes when piping
+process.shell = ['/bin/bash', '-euo', 'pipefail']
+
+// Disable process selector warnings by default. Use debug profile to enable warnings.
+nextflow.enable.configProcessNamesValidation = false
+
+def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
+timeline {
+    enabled = true
+    file    = "${params.outdir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
+}
+report {
+    enabled = true
+    file    = "${params.outdir}/pipeline_info/execution_report_${trace_timestamp}.html"
+}
+trace {
+    enabled = true
+    file    = "${params.outdir}/pipeline_info/execution_trace_${trace_timestamp}.txt"
+}
+dag {
+    enabled = true
+    file    = "${params.outdir}/pipeline_info/pipeline_dag_${trace_timestamp}.html"
+}
+
+manifest {
+    name            = 'ferlab/postprocessing'
+    author          = """Damien Geneste, David Morais, Felix-Antoine Le Sieur, Jeremy Costanza, Lysiane Bouchard"""
+    homePage        = 'https://github.com/ferlab/postprocessing'
+    description     = """Variant analysis for genome and exome GVCFs"""
+    mainScript      = 'main.nf'
+    nextflowVersion = '!>=23.04.0'
+    version         = '1.0dev'
+    doi             = ''
+}
+
+// Load modules.config for DSL2 module specific options
+includeConfig 'conf/modules.config'
