Fix: Removed faulty quay.io links
Fix: lint fix with schema and changelog

Fix: fixed schema parameter

Refactor: Cleanup comments
Applied changes from review comments

--- a/nextflow.config
+++ b/nextflow.config
@@ -26,8 +26,8 @@ params {
 
 
 	//Process-specific parameters
-    TSfilterSNP = '99.0'
-    TSfilterINDEL = '99.0'
+    TSfilterSNP = '99'
+    TSfilterINDEL = '99'
     hardFilters = [[name: 'QD2', expression: 'QD < 2.0'],
 		   [name: 'QD1', expression: 'QD < 1.0'],
                    [name: 'QUAL30', expression: 'QUAL < 30.0'],
@@ -37,7 +37,7 @@ params {
                    [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
                    [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
 	
-	//Resources options
+	//Resources optionsreferenceGenome
 	//defaults expecting to be overwritten
 	vepCpu = 4
 	max_cpus = 16
@@ -202,14 +202,6 @@ profiles {
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
 }
-
-// Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
-// Will not be used unless Apptainer / Docker / Podman / Singularity are enabled
-// Set to your registry if you have a mirror of containers
-apptainer.registry   = 'quay.io'
-docker.registry      = 'quay.io'
-podman.registry      = 'quay.io'
-singularity.registry = 'quay.io'
 
 // Nextflow plugins
 plugins {
