Fix: lint fix with schema and changelog
Fix: fixed schema parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -26,8 +26,8 @@ params {
 
 
 	//Process-specific parameters
-    TSfilterSNP = '99.0'
-    TSfilterINDEL = '99.0'
+    TSfilterSNP = '99'
+    TSfilterINDEL = '99'
     hardFilters = [[name: 'QD2', expression: 'QD < 2.0'],
 		   [name: 'QD1', expression: 'QD < 1.0'],
                    [name: 'QUAL30', expression: 'QUAL < 30.0'],
@@ -37,7 +37,7 @@ params {
                    [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
                    [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
 	
-	//Resources options
+	//Resources optionsreferenceGenome
 	//defaults expecting to be overwritten
 	vepCpu = 4
 	max_cpus = 16
