Feat: Add module bctools_filter
Changed modules.config to include the new module params

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,17 +18,8 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
-    withName: FASTQC {
-        ext.args = '--quiet'
-    }
+    withName: BCFTOOLS_FILTER {
+        ext.args = "-e 'strlen(REF)>1 & strlen(REF)==strlen(ALT) & TYPE="snp" -Oz'"
 
-    withName: 'MULTIQC' {
-        ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
-        publishDir = [
-            path: { "${params.outdir}/multiqc" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
     }
-
 }
