Feat: Added module bcftools_norm Also added subworkflow file for exclude_mnps
Feat: Working version of exclude MNP through modules

Fix: Included the correct containers in modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -19,7 +19,14 @@ process {
     ]
 
     withName: BCFTOOLS_FILTER {
-        ext.args = "-e 'strlen(REF)>1 & strlen(REF)==strlen(ALT) & TYPE="snp" -Oz'"
+        container = 'staphb/bcftools:1.19'
+        ext.args = {'''-e 'strlen(REF)>1 & strlen(REF)==strlen(ALT) & TYPE="snp" --write-index=tbi -Oz'''}
+        ext.prefix = {meta.familyId + "." + meta.sample + ".filtered"}
+    }
 
+    withName: BCFTOOLS_NORM {
+        container = 'staphb/bcftools:1.19'
+        ext.args = {'-c w -d all -Oz --write-index=tbi'}
+        ext.prefix = {meta.familyId + "." + meta.sample + ".normalized"}
     }
 }
