--- a/nextflow.config
+++ b/nextflow.config
@@ -209,9 +209,6 @@ env {
 
 process {
   disk = 40.GB
-	withName: 'excludeMNPs|splitMultiAllelics' {
-		container = 'staphb/bcftools:1.19'
-	}
 	withName: 'importGVCF|genotypeGVCF_multi|genotypeGVCF_solo|genotypeGVCF|variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|hardFiltering|gatherVCF' {
 		container = 'broadinstitute/gatk:4.5.0.0'
 	}
@@ -222,7 +219,7 @@ process {
 		container = 'staphb/htslib:1.19'
 	}
 
-	withName: 'excludeMNPs' {
+	withName: 'BCFTOOLS_FILTER|BCFTOOLS_NORM|BCFTOOLS_INDEX' {
 		errorStrategy = 'retry'
 		maxRetries = 1
 		cpus	=	{ check_max( 2 		* task.attempt, 'cpus' 		) 	}
