Fix: staphb bcftools container updated to 1.20 The update was necessary to write the index after each bcftool step in tbi format. 1.19 was also outdated compared to the nf-core bcftool modules.
Made changes to changelog and removed original process exclude_MNPs

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -19,13 +19,13 @@ process {
     ]
 
     withName: BCFTOOLS_FILTER {
-        container = 'staphb/bcftools:1.19'
-        ext.args = {'''-e 'strlen(REF)>1 & strlen(REF)==strlen(ALT) & TYPE="snp" --write-index=tbi -Oz'''}
+        container = 'staphb/bcftools:1.20'
+        ext.args = {'-e \'strlen(REF)>1 & strlen(REF)==strlen(ALT) & TYPE="snp"\' -Oz --write-index=tbi'}
         ext.prefix = {meta.familyId + "." + meta.sample + ".filtered"}
     }
 
     withName: BCFTOOLS_NORM {
-        container = 'staphb/bcftools:1.19'
+        container = 'staphb/bcftools:1.20'
         ext.args = {'-c w -d all -Oz --write-index=tbi'}
         ext.prefix = {meta.familyId + "." + meta.sample + ".normalized"}
     }
