--- a/nextflow.config
+++ b/nextflow.config
@@ -219,7 +219,7 @@ process {
 		container = 'staphb/htslib:1.19'
 	}
 
-	withName: 'BCFTOOLS_FILTER|BCFTOOLS_NORM|BCFTOOLS_INDEX' {
+	withName: 'BCFTOOLS_FILTER|BCFTOOLS_NORM' {
 		errorStrategy = 'retry'
 		maxRetries = 1
 		cpus	=	{ check_max( 2 		* task.attempt, 'cpus' 		) 	}
