Refactor: Uninstalled multiqc and fastqc modules and other files
Changelog addition

--- a/nextflow.config
+++ b/nextflow.config
@@ -213,7 +213,7 @@ process {
 	withName: tabix {
 		container = 'staphb/htslib:1.19'
 	}
-
+    //see conf/base.config for the performance options of defined by nf-core standards
 	withName: 'BCFTOOLS_FILTER|BCFTOOLS_NORM' {
 		errorStrategy = 'retry'
 		maxRetries = 1
