feat: CLIN-3090 Save logs and move initialization logic to PIPELINE_INITIALISATION
Other changes:

- Use github workflow triggers consistent with ferlab git flow. Had to disable a linters test for this.
- Ensure that github workflow ci.yml can run tests in stub mode, covering both WES and WGS branches.
- Fix bugs in test sample sheet
- Bump minimum nextflow version to 23.10.1
- Add missing docker image for process writeMeta

--- a/conf/test.config
+++ b/conf/test.config
@@ -5,8 +5,12 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run ferlab/postprocessing -profile test,<docker/singularity> --outdir <OUTDIR>
+        nextflow run ferlab/postprocessing -stub -profile test,<docker/singularity> --outdir <OUTDIR>
 
+    Note: We are using the -stub flag for now as our test setup is not ready yet. This 
+    reduces test coverage. For local testing, please use real data and run in non-stub 
+    mode if possible.
+   
 ----------------------------------------------------------------------------------------
 */
 
@@ -20,10 +24,13 @@ params {
     max_time   = '6.h'
 
     // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = "$projectDir/assets/TestSampleSheet.tsv"
-
-    // Genome references
-    genome = 'R64-1-1'
+    input  = "$projectDir/assets/TestSampleSheet.csv"
+    outdir = "$projectDir/results"
+ 
+    // Stub values are used for these parameters. They will be replaced with actual values when our test setup is ready.
+    intervalsFile = "interval_long_local.list"
+    broad = "broad"
+    referenceGenome = "reference/Genome/directory"
+    referenceGenomeFasta = "genome.fasta"
+    vepCache = "vepCache"
 }
