--- a/nextflow.config
+++ b/nextflow.config
@@ -286,6 +286,9 @@ process {
 		disk	=	{ check_max( 80.GB	* task.attempt, 'disk'		)	}
 		time	=	{ check_max( 10.h 	* task.attempt, 'time'		)	}
 	}
+    withName: 'writemeta' {
+	    container = 'ubuntu:24.10'	
+    }
 }
 
 // Function to ensure that resource requirements don't go beyond
@@ -362,7 +365,7 @@ manifest {
     homePage        = 'https://github.com/Ferlab-Ste-Justine/Post-processing-Pipeline'
     description     = """Variant analysis for genome and exome GVCFs"""
     mainScript      = 'main.nf'
-    nextflowVersion = '!>=23.04.0'
+    nextflowVersion = '!>=23.10.1'
     version         = '1.0dev'
     doi             = ''
 }
