Feat: Add profile test for exclude mnp. Minor modifications to subworkflow, to output the versions and show meta.ID during process call.

--- a/conf/test.config
+++ b/conf/test.config
@@ -22,6 +22,20 @@ params {
     // Input and output
     input  = "$projectDir/assets/TestSampleSheet.csv"
     outdir = "$projectDir/results"
+    referenceGenome = "https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/"
+    referenceGenomeFasta = "genome.fasta"
+    intervalsFile = "$projectDir/assets/testInterval22.txt"
+    broad = "$projectDir/data-test/reference/broad"
+    vepCache = "$projectDir/data-test/reference/annotation/.vep"
+    hardFilters = [[name: 'QD2', expression: 'QD < 2.0'],
+		           [name: 'QD1', expression: 'QD < 1.0'],
+                   [name: 'QUAL30', expression: 'QUAL < 30.0'],
+                   [name: 'SOR3', expression: 'SOR > 3.0'],
+                   [name: 'FS60', expression: 'FS > 60.0'],
+                   [name: 'MQ40', expression: 'MQ < 40.0'],
+                   [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
+                   [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
+
 
     // Stub values are used for these parameters. They will be replaced with actual values when our test data setup is 
     // ready.
@@ -30,4 +44,17 @@ params {
     referenceGenome = "reference/Genome/directory"
     referenceGenomeFasta = "genome.fasta"
     vepCache = "vepCache"
+}
+process {
+    withName: BCFTOOLS_FILTER {
+        container = 'staphb/bcftools:1.20'
+        ext.args = {'-e \'strlen(REF)>1 & strlen(REF)==strlen(ALT) & TYPE="snp"\' -Oz --write-index=tbi'}
+        ext.prefix = {meta.familyId + "." + meta.sample + ".filtered"}
+    }
+
+    withName: BCFTOOLS_NORM {
+        container = 'staphb/bcftools:1.20'
+        ext.args = {'-c w -d all -Oz --write-index=tbi'}
+        ext.prefix = {meta.familyId + "." + meta.sample + ".normalized"}
+    }
 }
