--- a/nextflow.config
+++ b/nextflow.config
@@ -64,6 +64,8 @@ params {
     validationShowHiddenParams       = false
     validate_params                  = true
 
+
+    modules_testdata_base_path = 's3://ngi-igenomes/testdata/nf-core/modules/'
 }
 
 // Load base.config by default for all pipelines
@@ -76,12 +78,6 @@ try {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
-// Load ferlab/postprocessing custom profiles from different institutions.
-try {
-    includeConfig "${params.custom_config_base}/pipeline/postprocessing.config"
-} catch (Exception e) {
-    System.err.println("WARNING: Could not load nf-core/config/postprocessing profiles: ${params.custom_config_base}/pipeline/postprocessing.config")
-}
 profiles {
     debug {
         dumpHashes              = true
