fix: CLIN-3090 run test in stub mode in github workflow
Had to do many adjustments to make it work:
- fix bugs in test sample sheet and make it cover both WGS an WES sequencing types
- complete the test profile and add missing required parameters in schema
- adjusted the github workflow command to add the -stub option

Also took the opportunity to do a bit of clean up:
- align workflow trigger rule with ferlab git flow (had to disable linter tests to allow this)
- run the test with the same nextflow version as in production (23.10.1)
- add missing docker image for process writemeta
- make sure that the changelog renders correctly in the ui
- fix a bug for process genotypeGVCF with extra java arguments

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,14 +1,13 @@
 name: nf-core linting
-# This workflow is triggered on pushes and PRs to the repository.
-# It runs the `nf-core lint` and markdown lint tests to ensure
-# that the code meets the nf-core guidelines.
+# This workflow runs the `nf-core lint` and markdown lint tests to ensure
+# code quality and adherence to relevant nf-core guidelines.
 on:
   push:
     branches:
-      - dev
+      - main
+    tags:
+      - v*
   pull_request:
-  release:
-    types: [published]
 
 jobs:
   pre-commit:
