--- a/conf/test.config
+++ b/conf/test.config
@@ -19,11 +19,15 @@ params {
     max_memory = '6.GB'
     max_time   = '6.h'
 
-    // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = "$projectDir/assets/TestSampleSheet.tsv"
+    // Input and output
+    input  = "$projectDir/assets/TestSampleSheet.csv"
+    outdir = "$projectDir/results"
 
-    // Genome references
-    genome = 'R64-1-1'
+    // Stub values are used for these parameters. They will be replaced with actual values when our test data setup is 
+    // ready.
+    intervalsFile = "interval_long_local.list"
+    broad = "broad"
+    referenceGenome = "reference/Genome/directory"
+    referenceGenomeFasta = "genome.fasta"
+    vepCache = "vepCache"
 }
