--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: nf-core CI
 on:
   push:
     branches:
-      - dev
+      - main
+    tags:
+      - v*
   pull_request:
-  release:
-    types: [published]
 
 env:
   NXF_ANSI_LOG: false
@@ -24,7 +24,7 @@ jobs:
     strategy:
       matrix:
         NXF_VER:
-          - "23.04.0"
+          - "23.10.1"
           - "latest-everything"
     steps:
       - name: Check out pipeline code
@@ -39,8 +39,9 @@ jobs:
         uses: jlumbroso/free-disk-space@54081f138730dfa15788a46383842cd2f914a1be # v1.3.1
 
       - name: Run pipeline with test data
-        # TODO nf-core: You can customise CI pipeline run tests as required
-        # For example: adding multiple test runs with different parameters
-        # Remember that you can parallelise this by using strategy.matrix
+       # Add as many test runs as needed here. Remember that you can parallelise this by
+       # using strategy.matrix.
+
+        # Using the stub mode until our test data setup is ready
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test,docker --outdir ./results
+          nextflow run ${GITHUB_WORKSPACE} -stub -profile test,docker
