--- a/conf/test.config
+++ b/conf/test.config
@@ -2,11 +2,18 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Nextflow config file for running minimal tests
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Defines input files and everything required to run a fast and simple pipeline test.
+    Defines parameters and configuration settings required to run a fast and simple pipeline test.
 
-    Use as follows:
-        nextflow run ferlab/postprocessing -profile test,<docker/singularity> --outdir <OUTDIR>
+    To run the pipeline in stub mode, you can use this command:
+        nextflow  run Ferlab-Ste-Justine/Post-processing-Pipeline -r main  -stub -profile test,docker --input assets/testSampleSheet.csv
+     
+    To run the pipeline without using stub mode, we have a test dataset available, but it must 
+    be downloaded manually. Ask the bioinformatics team for its location. If you download the dataset 
+    archive (.tar.gz) and extract it at the root of this  repository (tar -xzf <archive file>), you should 
+    be able to run the pipeline with the following command:
 
+        nextflow -c data-test/test.config  run  Ferlab-Ste-Justine/Post-processing-Pipeline -r main -profile test,docker
+    
 ----------------------------------------------------------------------------------------
 */
 
@@ -20,31 +27,17 @@ params {
     max_time   = '6.h'
 
     // Input and output
-/*
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Nextflow config file for running minimal tests
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Defines parameters and configuration settings required to run a fast and simple pipeline test.
-
-To run the pipeline in stub mode, you can use this command:
-     nextflow  run Ferlab-Ste-Justine/Post-processing-Pipeline -r main  -stub -profile test,docker
-     
-To run the pipeline without using stub mode, we have a test dataset available, 
-but it must be downloaded manually. Ask the bioinformatics team for its location.
-If you download the dataset archive (.tar.gz) and extract it at the root of this 
-repository (tar -xzf <archive file>), you should be able to run the pipeline with the
- following command:
-     nextflow -c data-test/test.config  run  Ferlab-Ste-Justine/Post-processing-Pipeline -r main -profile test,docker --input data-test/testSampleSheet.csv
-    
-----------------------------------------------------------------------------------------
-*/
     input  = "data-test/testSampleSheet.csv"
     outdir = "results"
+
+    // Reference data
     referenceGenome = "data-test/reference/Homo_sapiens_assembly38/chr22"
     referenceGenomeFasta = "chr22.fa"
     intervalsFile = "testInterval22.list"
     broad = "data-test/reference/broad"
     vepCache = "data-test/reference/annotation/.vep"
+
+    // Filters for hard filtering
     hardFilters = [[name: 'QD2', expression: 'QD < 2.0'],
 		           [name: 'QD1', expression: 'QD < 1.0'],
                    [name: 'QUAL30', expression: 'QUAL < 30.0'],
