Addressed Lysiane's comments
Fixed test parameter paths

Adjusted git action, fixed more test paths, added variable name for
channel building

Added some "def" to limit variable scope

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,4 @@ jobs:
 
         # Using the stub mode until our test data setup is ready
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -stub -profile test,docker
+          nextflow run ${GITHUB_WORKSPACE} -stub -profile test,docker --input assets/TestSampleSheet.csv
