--- a/conf/modules.config
+++ b/conf/modules.config
@@ -21,12 +21,12 @@ process {
     withName: BCFTOOLS_FILTER {
         container = 'staphb/bcftools:1.20'
         ext.args = {'-e \'strlen(REF)>1 & strlen(REF)==strlen(ALT) & TYPE="snp"\' -Oz --write-index=tbi'}
-        ext.prefix = {meta.familyId + "." + meta.sample + ".filtered"}
+        ext.prefix = {meta.id + ".filtered"}
     }
 
     withName: BCFTOOLS_NORM {
         container = 'staphb/bcftools:1.20'
         ext.args = {'-c w -d all -Oz --write-index=tbi'}
-        ext.prefix = {meta.familyId + "." + meta.sample + ".normalized"}
+        ext.prefix = {meta.id + ".normalized"}
     }
 }
