--- a/conf/test.config
+++ b/conf/test.config
@@ -20,13 +20,31 @@ params {
     max_time   = '6.h'
 
     // Input and output
-    input  = "$projectDir/assets/TestSampleSheet.csv"
-    outdir = "$projectDir/results"
-    referenceGenome = "https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/"
-    referenceGenomeFasta = "genome.fasta"
-    intervalsFile = "$projectDir/assets/testInterval22.txt"
-    broad = "$projectDir/data-test/reference/broad"
-    vepCache = "$projectDir/data-test/reference/annotation/.vep"
+/*
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Nextflow config file for running minimal tests
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Defines parameters and configuration settings required to run a fast and simple pipeline test.
+
+To run the pipeline in stub mode, you can use this command:
+     nextflow  run Ferlab-Ste-Justine/Post-processing-Pipeline -r main  -stub -profile test,docker
+     
+To run the pipeline without using stub mode, we have a test dataset available, 
+but it must be downloaded manually. Ask the bioinformatics team for its location.
+If you download the dataset archive (.tar.gz) and extract it at the root of this 
+repository (tar -xzf <archive file>), you should be able to run the pipeline with the
+ following command:
+     nextflow -c data-test/test.config  run  Ferlab-Ste-Justine/Post-processing-Pipeline -r main -profile test,docker --input data-test/testSampleSheet.csv
+    
+----------------------------------------------------------------------------------------
+*/
+    input  = "data-test/testSampleSheet.csv"
+    outdir = "results"
+    referenceGenome = "data-test/reference/Homo_sapiens_assembly38/chr22"
+    referenceGenomeFasta = "chr22.fa"
+    intervalsFile = "testInterval22.list"
+    broad = "data-test/reference/broad"
+    vepCache = "data-test/reference/annotation/.vep"
     hardFilters = [[name: 'QD2', expression: 'QD < 2.0'],
 		           [name: 'QD1', expression: 'QD < 1.0'],
                    [name: 'QUAL30', expression: 'QUAL < 30.0'],
@@ -35,26 +53,4 @@ params {
                    [name: 'MQ40', expression: 'MQ < 40.0'],
                    [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
                    [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
-
-
-    // Stub values are used for these parameters. They will be replaced with actual values when our test data setup is 
-    // ready.
-    intervalsFile = "interval_long_local.list"
-    broad = "broad"
-    referenceGenome = "reference/Genome/directory"
-    referenceGenomeFasta = "genome.fasta"
-    vepCache = "vepCache"
-}
-process {
-    withName: BCFTOOLS_FILTER {
-        container = 'staphb/bcftools:1.20'
-        ext.args = {'-e \'strlen(REF)>1 & strlen(REF)==strlen(ALT) & TYPE="snp"\' -Oz --write-index=tbi'}
-        ext.prefix = {meta.familyId + "." + meta.sample + ".filtered"}
-    }
-
-    withName: BCFTOOLS_NORM {
-        container = 'staphb/bcftools:1.20'
-        ext.args = {'-c w -d all -Oz --write-index=tbi'}
-        ext.prefix = {meta.familyId + "." + meta.sample + ".normalized"}
-    }
 }
