Add exomiser modules & add tools option in config to run specific tools for vep and exomiser

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -33,4 +33,15 @@ process {
     withName: COMBINEGVCFS {
         container = 'broadinstitute/gatk:4.5.0.0'
     }
+
+    withName: 'exomiser' { 
+        
+        container = 'exomiser/exomiser-cli:14.0.0-bash'
+        publishDir = [
+            path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+            mode: params.publish_dir_mode,
+            pattern: "results/*{vcf.gz,vcf.gz.tbi,tsv,json,html}",
+        ]
+    }
+
 }
