--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,13 @@ params {
     broad = null
     vepCache = null
     intervalsFile = null
-
+    tools = ""
+    genome = null
+    exomiser_version = null
+    exomiser_data_version = null
+	exomiser_analysis = null
+	exomiser_data = null
+    pedigree = null
 
 	//Process-specific parameters
     TSfilterSNP = '99'
