feat: CLIN-2947 Add optional exomiser process and tools parameter
This commit introduces the exomiser tool in the pipeline.
Additionally, it introduces a new parameter called `tools`, which allows users to specify whether VEP, Exomiser, or both should be executed.

Other changes:
- Group vep output files (i.e. vcf + .tbi files) in subfolder `vep`.
- Improve documentation (README, OUTPUT, USAGE, REFERENCE_DATA).
- Refactor postprocessing workflow to use `def` for local variables and standardize variable names.
- Update GitHub CI nf-test command: remove local tag constraint and activate CI mode.
- Replace workflow diagram in README.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -38,4 +38,23 @@ process {
         container = 'broadinstitute/gatk:4.5.0.0'
         ext.prefix = {meta.id + ".genotyped"}
     }
+
+    withName: EXOMISER { 
+        container = 'ferlabcrsj/exomiser:2.0.0'
+        publishDir = [
+            path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+            mode: params.publish_dir_mode,
+            pattern: "results/*{vcf.gz,vcf.gz.tbi,tsv,json,html}",
+        ]
+    }
+
+    // Currently, tabix is used only for vep output in the post-processing pipeline.
+    // Consider creating a vep subworkflow to group vep and tabix steps, making the process name more specific.
+    withName: 'FERLAB_POSTPROCESSING:POSTPROCESSING:tabix' {
+         publishDir = [
+            path: { "${params.outdir}/vep" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
 }
