--- a/nextflow.config
+++ b/nextflow.config
@@ -19,8 +19,19 @@ params {
     referenceGenome = null
     referenceGenomeFasta = null
     broad = null
-    vepCache = null
     intervalsFile = null
+    tools = ""
+    vepCache = null
+    exomiser_genome  = null
+    exomiser_data_dir = null
+    exomiser_data_version = null
+    exomiser_cadd_version = null
+    exomiser_cadd_indel_filename = null
+    exomiser_cadd_snv_filename  = null
+    exomiser_remm_version = null
+    exomiser_remm_filename = null
+    exomiser_analysis_wes = "${projectDir}/assets/exomiser/default_exomiser_WES_analysis.yml"
+    exomiser_analysis_wgs = "${projectDir}/assets/exomiser/default_exomiser_WGS_analysis.yml"
 
 
 	//Process-specific parameters
