--- a/conf/test.config
+++ b/conf/test.config
@@ -46,4 +46,18 @@ params {
                    [name: 'MQ40', expression: 'MQ < 40.0'],
                    [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
                    [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
+    
+    tools = "vep,exomiser"
+
+    // Exomiser parameters
+    exomiser_data_dir = "data-test/reference/exomiser"
+    exomiser_data_version = "2402"
+    exomiser_genome = "hg38"
+    exomiser_cadd_version = "1.7"
+    exomiser_cadd_indel_filename = "gnomad.genomes.r4.0.indel.tsv.gz"
+    exomiser_cadd_snv_filename  =  "whole_genome_SNVs.tsv.gz"
+    exomiser_remm_version = "0.3.1.post1"
+    exomiser_remm_filename = "ReMM.v0.3.1.post1.hg38.tsv.gz"
+    exomiser_analysis_wes = "${projectDir}/assets/exomiser/test_exomiser_analysis.yml"
+    exomiser_analysis_wgs = "${projectDir}/assets/exomiser/test_exomiser_analysis.yml"
 }
