Feat: Adds local module COMBINEGVCFS This module is mostly equivalent to the nf-core module [GATK4_COMBINEGVCFS](https://nf-co.re/modules/gatk4_combinegvcfs/). However, we found some aspects that needed changing in this premade module so we changed it locally. First, there was no stub block in the nf-core module. The stub is essential to run our tests, so it was added locally. Secondly, we allow the output of index the combined index file, which the original module did not permit. For more details, see our [notion page](https://www.notion.so/ferlab/Notes-for-nf-core-modules-subworkflows-1cb401615ea149278b87c12e9284745d)
This module was tested by comparing the md5sum of the bcftools view -H
of our output file compared to the ouput of the original
cqdg-denovo-nextflow pipeline. The whole pipeline was tested locally and
on juno.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -29,4 +29,9 @@ process {
         ext.args = {'-c w -d all -Oz --write-index=tbi'}
         ext.prefix = {meta.id + ".normalized"}
     }
+
+    withName: COMBINEGVCFS {
+        container = 'broadinstitute/gatk:4.5.0.0'
+        ext.args = '--intervals ' + "$params.broad/$params.intervalsFile"
+    }
 }
