--- a/nextflow.config
+++ b/nextflow.config
@@ -204,7 +204,7 @@ env {
 
 process {
   disk = 40.GB
-	withName: 'importGVCF|genotypeGVCF_multi|genotypeGVCF_solo|genotypeGVCF|variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|hardFiltering|gatherVCF' {
+	withName: 'genotypeGVCF_multi|genotypeGVCF_solo|genotypeGVCF|variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|hardFiltering|gatherVCF' {
 		container = 'broadinstitute/gatk:4.5.0.0'
 	}
 	withName: vep {
@@ -222,7 +222,7 @@ process {
 		disk	=	{ check_max( 50.GB 	* task.attempt, 'disk' 		)	}
 		time	=	{ check_max( 8.h  	* task.attempt, 'time' 		)	}
 	}
-	withName: 'importGVCF' {
+	withName: 'COMBINEGVCFS' {
 		errorStrategy = 'retry'
 		maxRetries = 1
 		cpus	=	{ check_max( 4		* task.attempt, 'cpus'		) 	}
