Implement exomiser for trio, fix output format, change input for exomiser process

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -34,8 +34,7 @@ process {
         container = 'broadinstitute/gatk:4.5.0.0'
     }
 
-    withName: 'exomiser' { 
-        
+    withName: EXOMISER { 
         container = 'exomiser/exomiser-cli:14.0.0-bash'
         publishDir = [
             path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
