--- a/nextflow.config
+++ b/nextflow.config
@@ -24,10 +24,14 @@ params {
     tools = ""
     genome = null
     exomiser_version = null
+    exomiser_data_dir = null
     exomiser_data_version = null
+    exomiser_cadd_version = null
+    exomiser_remm_version = null
 	exomiser_analysis = null
-	exomiser_data = null
-    pedigree = null
+
+
+
 
 	//Process-specific parameters
     TSfilterSNP = '99'
