Feat: Added nf-core module GATK4_GENOTYPEGVCFS The module was left unchanged. Moved container description to modules.config. I checked the md5sum of the output genotyped vcf (without header) compared to the output from cqdg-denovo-nextflow. The pipeline was tested locally and on juno.

--- a/nextflow.config
+++ b/nextflow.config
@@ -204,7 +204,7 @@ env {
 
 process {
   disk = 40.GB
-	withName: 'genotypeGVCF_multi|genotypeGVCF_solo|genotypeGVCF|variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|hardFiltering|gatherVCF' {
+	withName: 'variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|hardFiltering|gatherVCF' {
 		container = 'broadinstitute/gatk:4.5.0.0'
 	}
 	withName: vep {
@@ -230,7 +230,7 @@ process {
 		disk	=	{ check_max( 80.GB	* task.attempt, 'disk'		)	}
 		time	=	{ check_max( 8.h	* task.attempt, 'time'		)	}
 	}
-	withName: 'genotypeGVCF' {
+	withName: 'GATK4_GENOTYPEGVCFS' {
 		errorStrategy = 'retry'
 		maxRetries = 2
 		cpus	=	{ check_max( 2		* task.attempt, 'cpus' 		) 	}
