--- a/conf/modules.config
+++ b/conf/modules.config
@@ -33,4 +33,10 @@ process {
     withName: COMBINEGVCFS {
         container = 'broadinstitute/gatk:4.5.0.0'
     }
+
+        withName: GATK4_GENOTYPEGVCFS {
+        container = 'broadinstitute/gatk:4.5.0.0'
+        ext.prefix = {meta.id + ".genotyped"}
+        
+    }
 }
