--- a/conf/test.config
+++ b/conf/test.config
@@ -20,6 +20,7 @@
 params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
+    modules_testdata_base_path = 's3://ngi-igenomes/testdata/nf-core/modules/'
 
     // Limit resources so that this can run on GitHub Actions
     max_cpus   = 2
