tweaks to have functional test setup

--- a/conf/test.config
+++ b/conf/test.config
@@ -46,4 +46,13 @@ params {
                    [name: 'MQ40', expression: 'MQ < 40.0'],
                    [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
                    [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
+
+    tools = "vep,exomiser"
+    exomiser_version = "version"  //I think it is not used anymore
+    exomiser_data_version = "2402"
+    exomiser_analysis = "assets/exomiser_analysis.yaml"
+    exomiser_data = "data-test/reference/exomiser"
+    pedigree =  "pedigree" //I think it is not used anymore
+    genome = "hg38"
+
 }
