--- a/.github/workflows/publish_with_sha.yml
+++ b/.github/workflows/publish_with_sha.yml
@@ -20,3 +20,17 @@ jobs:
           location: containers/nextflow
           dockerfile: containers/nextflow/Dockerfile
           tag_format: "{sha}-{timestamp}"
+  push-exomiser:
+      name: Publish Exomiser Image using commit sha and timestamp
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - name: Push the image on the registry
+          uses: Ferlab-Ste-Justine/action-push-image@v2
+          with:
+            username: ${{ secrets.FERLAB_DOCKER_HUB_USER }}
+            password: ${{ secrets.FERLAB_DOCKER_HUB_TOKEN }}
+            image: ferlabcrsj/exomiser
+            location: containers/exomiser
+            dockerfile: containers/exomiser/Dockerfile
+            tag_format: "{semver}"
