fix github actions

--- a/.github/workflows/publish_with_latest.yml
+++ b/.github/workflows/publish_with_latest.yml
@@ -33,4 +33,4 @@ jobs:
             image: ferlabcrsj/exomiser
             location: containers/exomiser
             dockerfile: containers/exomiser/Dockerfile
-            tag_format: "{semver}"
+            tag_format: "latest"
