define exomiser docker version

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -35,7 +35,7 @@ process {
     }
 
     withName: EXOMISER { 
-        container = 'exomiser/exomiser-cli:14.0.0-bash'
+        container = 'ferlabcrsj/exomiser:2.0.0'
         publishDir = [
             path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
             mode: params.publish_dir_mode,
