Applying corrections to cover vep and exomiser in stub mode test
Other changes:
- delete parameters exomiser_cadd_version  and exomiser_remm_version that are not used
- add extra line in test sample sheet to cover both wgs and wes branches
- fix bug not allowing both vep and exomiser tools
- minor correction in postprocessing.nf workflow to use list type instead tuple function

--- a/conf/test.config
+++ b/conf/test.config
@@ -46,4 +46,10 @@ params {
                    [name: 'MQ40', expression: 'MQ < 40.0'],
                    [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
                    [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
+
+    tools = "vep,exomiser"
+
+    // Exomiser parameters
+    exomiser_analysis = "assets/exomiser/test_exomiser_analysis.yml"
+    exomiser_data_dir = "data-test/reference/exomiser"
 }
