Be able to run exomiser locally with a public test dataset

--- a/conf/test.config
+++ b/conf/test.config
@@ -52,4 +52,6 @@ params {
     // Exomiser parameters
     exomiser_analysis = "assets/exomiser/test_exomiser_analysis.yml"
     exomiser_data_dir = "data-test/reference/exomiser"
+    exomiser_data_version = "2402"
+    genome = "hg38"
 }
