Feat: Adds GATK4_VARIANTFILTRATION nf-core module This module will replace the local hardFilters.nf. Also I removed the local tagArtifacts function because calling GATK4_VARIANTFILTRATION requires locally-defined parameters (ie the reference fasta, index and dict), and I believe it makes more sense here to keep most module-calling to the main workflow.
Tested locally and on juno.
Outputs md5sum have been compared with older cqdg-denovo-nextflow
pipeline.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -39,6 +39,13 @@ process {
         ext.prefix = {meta.id + ".genotyped"}
     }
 
+    withName: GATK4_VARIANTFILTRATION {
+        container = 'broadinstitute/gatk:4.5.0.0'
+        ext.prefix = {meta.id + ".hardfiltered"}
+        def filters = params.hardFilters
+        ext.args = {filters.collect{ "--filter \"${it.expression}\" --filter-name \"${it.name}\"" }.join(" ")}
+    }
+
     withName: EXOMISER { 
         container = 'ferlabcrsj/exomiser:2.0.0'
         publishDir = [
