--- a/nextflow.config
+++ b/nextflow.config
@@ -215,7 +215,7 @@ env {
 
 process {
   disk = 40.GB
-	withName: 'variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|hardFiltering|gatherVCF' {
+	withName: 'variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|gatherVCF' {
 		container = 'broadinstitute/gatk:4.5.0.0'
 	}
 	withName: vep {
@@ -265,7 +265,7 @@ process {
 		disk	=	{ check_max( 30.GB	* task.attempt, 'disk'		)	}
 		time	=	{ check_max( 10.h	* task.attempt, 'time'		)	}
 	}
-  	withName: 'hardFiltering' {
+  	withName: 'GATK4_VARIANTFILTRATION' {
 		errorStrategy = 'retry'
 		maxRetries = 2
 		cpus	=	{ check_max( 2		* task.attempt, 'cpus'		) 	}
