Added back the tagArtifacts function. Fixed changelog and added commnt in modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -42,6 +42,7 @@ process {
     withName: GATK4_VARIANTFILTRATION {
         container = 'broadinstitute/gatk:4.5.0.0'
         ext.prefix = {meta.id + ".hardfiltered"}
+        //collects all filters given as parameter, separating by name and expression
         def filters = params.hardFilters
         ext.args = {filters.collect{ "--filter \"${it.expression}\" --filter-name \"${it.name}\"" }.join(" ")}
     }
