feat: add parameter allow_old_gatk_data and fix ci workflow failing on latest nextflow version
- Add parameter allow_old_gatk_data. If set to true (false by default),  older GATK version data
  will be tolerated in GATK_GENOTYPEGVCFS process.
- We set this parameter to true in test.config as our public test dataset was aligned with an old
  gatk version. We maintain default behavior in production to fail and log a warning for deprecated GATK versions
- Fix CI workflow failing on the latest Nextflow version by adding missing stub block in process writemeta
- Improve CI workflow: display .nextflow.log on error and fix incorrect assumption about assets folder location

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,8 @@ jobs:
 
         # Using the stub mode until our test data setup is ready
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -stub -profile test,docker --input assets/TestSampleSheet.csv
+          nextflow run ${GITHUB_WORKSPACE} -stub-run -profile test,docker --input "${GITHUB_WORKSPACE}/assets/TestSampleSheet.csv"
+
+      - name: Display nextflow.log on error
+        if: failure()
+        run: cat .nextflow.log
