--- a/conf/modules.config
+++ b/conf/modules.config
@@ -36,6 +36,7 @@ process {
 
     withName: GATK4_GENOTYPEGVCFS {
         container = 'broadinstitute/gatk:4.5.0.0'
+        ext.args = params.allow_old_gatk_data ? "--allow-old-rms-mapping-quality-annotation-data" : ""
         ext.prefix = {meta.id + ".genotyped"}
     }
 
