--- a/conf/test.config
+++ b/conf/test.config
@@ -12,7 +12,7 @@
     archive (.tar.gz) and extract it at the root of this  repository (tar -xzf <archive file>), you should 
     be able to run the pipeline with the following command:
 
-        nextflow -c data-test/test.config  run  Ferlab-Ste-Justine/Post-processing-Pipeline -r main -profile test,docker
+        nextflow run  Ferlab-Ste-Justine/Post-processing-Pipeline -r main -profile test,docker
     
 ----------------------------------------------------------------------------------------
 */
@@ -60,4 +60,7 @@ params {
     exomiser_remm_filename = "ReMM.v0.3.1.post1.hg38.tsv.gz"
     exomiser_analysis_wes = "${projectDir}/assets/exomiser/test_exomiser_analysis.yml"
     exomiser_analysis_wgs = "${projectDir}/assets/exomiser/test_exomiser_analysis.yml"
+
+    // To be able to run on our public test dataset, which is aligned with an older version of GATK4
+    allow_old_gatk_data = true
 }
