--- a/nextflow.config
+++ b/nextflow.config
@@ -33,7 +33,6 @@ params {
     exomiser_analysis_wes = "${projectDir}/assets/exomiser/default_exomiser_WES_analysis.yml"
     exomiser_analysis_wgs = "${projectDir}/assets/exomiser/default_exomiser_WGS_analysis.yml"
 
-
 	//Process-specific parameters
     TSfilterSNP = '99'
     TSfilterINDEL = '99'
@@ -45,6 +44,9 @@ params {
                    [name: 'MQ40', expression: 'MQ < 40.0'],
                    [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
                    [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
+    
+
+    allow_old_gatk_data = false
 	
 	//Resources optionsreferenceGenome
 	//defaults expecting to be overwritten
