--- a/nextflow.config
+++ b/nextflow.config
@@ -371,7 +371,7 @@ manifest {
     description     = """Variant analysis for genome and exome GVCFs"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.10.1'
-    version         = '2.1.0dev'
+    version         = '2.2.0-dev'
     doi             = ''
 }
 
