feat: CLIN-3406 make vep command configurable
Other change: in github ci workflow, we consider the latest stable nextflow version and
avoid testing on edge versions.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -57,11 +57,32 @@ process {
         ]
     }
 
+    withName: ENSEMBLVEP_VEP {
+        container = 'ensemblorg/ensembl-vep:release_111.0' //sticking to v111 for now, but we should update this
+        def args_list =  [
+            "--offline",
+            "--format vcf",
+            "--vcf",
+            "--xref_refseq",
+            "--variant_class",
+            "--numbers",
+            "--hgvs",
+            "--hgvsg",
+            "--canonical",
+            "--symbol",
+            "--flag_pick",
+            "--no_stats",
+            "--fields \"Allele,Consequence,IMPACT,SYMBOL,Feature_type,Gene,PICK,Feature,EXON,BIOTYPE,INTRON,HGVSc,HGVSp,STRAND,CDS_position,cDNA_position,Protein_position,Amino_acids,Codons,VARIANT_CLASS,HGVSg,CANONICAL,RefSeq\""
+        ]
+        ext.args = args_list.join(" ")
+        ext.prefix =  {"variants.${meta.id}.vep"}
+    }
+
     // Currently, tabix is used only for vep output in the post-processing pipeline.
     // Consider creating a vep subworkflow to group vep and tabix steps, making the process name more specific.
     withName: 'FERLAB_POSTPROCESSING:POSTPROCESSING:tabix' {
          publishDir = [
-            path: { "${params.outdir}/vep" },
+            path: { "${params.outdir}/ensemblvep" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
