--- a/conf/test.config
+++ b/conf/test.config
@@ -35,7 +35,11 @@ params {
     referenceGenomeFasta = "chr22.fa"
     intervalsFile = "testInterval22.list"
     broad = "data-test/reference/broad"
-    vepCache = "data-test/reference/annotation/.vep"
+
+    //Vep
+    vep_cache = "data-test/reference/annotation/.vep"
+    vep_cache_version = "111"
+    vep_genome = "GRCh38"
 
     // Filters for hard filtering
     hardFilters = [[name: 'QD2', expression: 'QD < 2.0'],
