--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,9 @@ params {
     broad = null
     intervalsFile = null
     tools = ""
-    vepCache = null
+    vep_cache = null
+    vep_cache_version = null
+    vep_genome = null
     exomiser_genome  = null
     exomiser_data_dir = null
     exomiser_data_version = null
@@ -50,11 +52,10 @@ params {
 	
 	//Resources optionsreferenceGenome
 	//defaults expecting to be overwritten
-	vepCpu = 4
 	max_cpus = 16
-	max_disk = 80.GB
-	max_time = 12.h
-	max_memory = 120.GB
+	max_disk = '80.GB'
+	max_time = '12.h'
+	max_memory = '120.GB'
 
     // Boilerplate options
     outdir                       = null
@@ -220,9 +221,6 @@ process {
 	withName: 'variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|gatherVCF' {
 		container = 'broadinstitute/gatk:4.5.0.0'
 	}
-	withName: vep {
-		container = 'ensemblorg/ensembl-vep:release_111.0'
-	}
 	withName: tabix {
 		container = 'staphb/htslib:1.19'
 	}
@@ -283,7 +281,7 @@ process {
 		disk	=	{ check_max( 30.GB	* task.attempt, 'disk'		)	}
 		time	=	{ check_max( 10.h	* task.attempt, 'time'		)	}
 	}
-	withName: 'vep' {
+	withName: 'ENSEMBLVEP_VEP' {
 		errorStrategy = 'retry'
 		maxRetries = 2
 		cpus	=	{ check_max( 4 		* task.attempt, 'cpus'		)	}
