feat: CLIN-3624 make the interval optional in combineGVCF

--- a/conf/test.config
+++ b/conf/test.config
@@ -33,7 +33,7 @@ params {
     // Reference data
     referenceGenome = "data-test/reference/Homo_sapiens_assembly38/chr22"
     referenceGenomeFasta = "chr22.fa"
-    intervalsFile = "testInterval22.list"
+    intervalsFile = "data-test/reference/broad/testInterval22.list"
     broad = "data-test/reference/broad"
 
     //Vep
