feat: CLIN-3616 allow to pass dbsnp option in genotypegvcf

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,6 +20,8 @@ params {
     referenceGenomeFasta = null
     broad = null
     intervalsFile = null
+    dbsnpFile = null
+    dbsnpFileIndex = null
     tools = ""
     vep_cache = null
     vep_cache_version = null
