feat: CLIN-36110 allow to skip exclude mnps

--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,7 @@ params {
     exomiser_analysis_wgs = "${projectDir}/assets/exomiser/default_exomiser_WGS_analysis.yml"
 
 	//Process-specific parameters
+    exclude_mnps = true
     TSfilterSNP = '99'
     TSfilterINDEL = '99'
     hardFilters = [[name: 'QD2', expression: 'QD < 2.0'],
