--- a/conf/modules.config
+++ b/conf/modules.config
@@ -78,9 +78,8 @@ process {
         ext.prefix =  {"variants.${meta.id}.vep"}
     }
 
-    // Currently, tabix is used only for vep output in the post-processing pipeline.
-    // Consider creating a vep subworkflow to group vep and tabix steps, making the process name more specific.
-    withName: 'FERLAB_POSTPROCESSING:POSTPROCESSING:tabix' {
+    // To publish the vep index file in the same output folder as the vep output
+    withName: 'vep_tabix' {
          publishDir = [
             path: { "${params.outdir}/ensemblvep" },
             mode: params.publish_dir_mode,
