feat: CLIN-3411 only publish main outputs
It is possible to publish the output of all processes as before by setting the parameter `publish_all=true`.

The naming logic for the different process output folders is preserved.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -10,13 +10,21 @@
 ----------------------------------------------------------------------------------------
 */
 
-process {
 
-    publishDir = [
+def new_publish_dir(new_attributes=[:]) { 
+    def default_publish_dir = [
+        enabled: params.publish_all,
         path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
         mode: params.publish_dir_mode,
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
+
+    return default_publish_dir + new_attributes
+}
+
+process {
+
+    publishDir = new_publish_dir()
 
     withName: BCFTOOLS_FILTER {
         container = 'staphb/bcftools:1.20'
@@ -50,15 +58,15 @@ process {
 
     withName: EXOMISER { 
         container = 'ferlabcrsj/exomiser:2.3.0'
-        publishDir = [
-            path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode,
-            pattern: "results/*{vcf.gz,vcf.gz.tbi,tsv,json,html}",
-        ]
+        publishDir = new_publish_dir([
+            enabled: true,
+            pattern: 'results/*{vcf.gz,vcf.gz.tbi,tsv,json,html}'
+        ])
     }
 
     withName: ENSEMBLVEP_VEP {
         container = 'ensemblorg/ensembl-vep:release_111.0' //sticking to v111 for now, but we should update this
+        publishDir = new_publish_dir([enabled: true])
         def args_list =  [
             "--offline",
             "--format vcf",
@@ -80,10 +88,13 @@ process {
 
     // To publish the vep index file in the same output folder as the vep output
     withName: 'vep_tabix' {
-         publishDir = [
-            path: { "${params.outdir}/ensemblvep" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
+        publishDir = new_publish_dir([
+            enabled: true,
+            path: { "${params.outdir}/ensemblvep" }
+        ])
+    }
+
+    withName: 'splitMultiAllelics' {
+        publishDir = new_publish_dir([enabled: true])
     }
 }
