--- a/conf/test.config
+++ b/conf/test.config
@@ -29,6 +29,7 @@ params {
     // Input and output
     input  = "data-test/testSampleSheet.csv"
     outdir = "results"
+    publish_all = true
 
     // Reference data
     referenceGenome = "data-test/reference/Homo_sapiens_assembly38/chr22"
