feat: CLIN-3686 add support for local source in exomiser
Other change:
Add extra java -Xmx option (maximum heap size) in exomiser command
as in nf-core processes

--- a/assets/exomiser/test_exomiser_analysis.yml
+++ b/assets/exomiser/test_exomiser_analysis.yml
@@ -12,6 +12,7 @@ inheritanceModes: {
   MITOCHONDRIAL: 0.2
 }
 frequencySources: [
+    LOCAL,
     UK10K
 ]
 pathogenicitySources: [ REVEL, REMM, CADD]
