--- a/conf/test.config
+++ b/conf/test.config
@@ -65,6 +65,9 @@ params {
     exomiser_remm_filename = "ReMM.v0.3.1.post1.hg38.tsv.gz"
     exomiser_analysis_wes = "${projectDir}/assets/exomiser/test_exomiser_analysis.yml"
     exomiser_analysis_wgs = "${projectDir}/assets/exomiser/test_exomiser_analysis.yml"
+    exomiser_local_frequency_path = "${projectDir}/assets/exomiser/local/local_frequency_test_hg38.tsv.gz"
+    exomiser_local_frequency_index_path = "${projectDir}/assets/exomiser/local/local_frequency_test_hg38.tsv.gz.tbi"
+
 
     // To be able to run on our public test dataset, which is aligned with an older version of GATK4
     allow_old_gatk_data = true
