--- a/nextflow.config
+++ b/nextflow.config
@@ -36,6 +36,8 @@ params {
     exomiser_remm_filename = null
     exomiser_analysis_wes = "${projectDir}/assets/exomiser/default_exomiser_WES_analysis.yml"
     exomiser_analysis_wgs = "${projectDir}/assets/exomiser/default_exomiser_WGS_analysis.yml"
+    exomiser_local_frequency_path = null
+    exomiser_local_frequency_index_path = null
 
 	//Process-specific parameters
     exclude_mnps = true
