--- a/conf/modules.config
+++ b/conf/modules.config
@@ -95,6 +95,7 @@ process {
     }
 
     withName: 'splitMultiAllelics' {
+        container = 'staphb/bcftools:1.20'
         publishDir = new_publish_dir([enabled: true])
     }
 }
