fix: CLIN-3453 add missing resources for exomiser process in config

--- a/nextflow.config
+++ b/nextflow.config
@@ -58,7 +58,7 @@ params {
 	//Resources optionsreferenceGenome
 	//defaults expecting to be overwritten
 	max_cpus = 16
-	max_disk = '80.GB'
+	max_disk = '200.GB'
 	max_time = '12.h'
 	max_memory = '120.GB'
 
@@ -223,7 +223,8 @@ env {
 }
 
 process {
-  disk = 40.GB
+    disk = 40.GB
+
 	withName: 'variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|gatherVCF' {
 		container = 'broadinstitute/gatk:4.5.0.0'
 	}
@@ -295,6 +296,14 @@ process {
 		disk	=	{ check_max( 80.GB	* task.attempt, 'disk'		)	}
 		time	=	{ check_max( 10.h 	* task.attempt, 'time'		)	}
 	}
+    withName: 'EXOMISER' {
+        errorStrategy = 'retry'
+		maxRetries = 2
+		cpus	=	{ check_max( 6 		* task.attempt, 'cpus'		)	}
+		memory	=	{ check_max( 36.GB	* task.attempt, 'memory'	)	}
+		disk	=	{ check_max( 150.GB	* task.attempt, 'disk'		)	}
+		time	=	{ check_max( 10.h 	* task.attempt, 'time'		)	}
+    }
     withName: 'writemeta' {
         container = 'ubuntu:24.10'	
     }
