fix: CLIN-3706 make sure that .gvcf file extension is supported in all scenarios
There was a problem in the GenotypeGVFCs process for solo families when skipping the excludeMnps step
This PR address the problem and add more robustness to the pipeline regarding input file extensions.
It will also have the benefit to automatically create the .tbi file if it is missing.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -26,6 +26,12 @@ process {
 
     publishDir = new_publish_dir()
 
+    withName: BCFTOOLS_VIEW {
+        container = 'staphb/bcftools:1.20'
+        ext.args = { '-Oz --write-index=tbi' }
+        ext.prefix = {meta.id + ".standardized.g"}
+    }
+
     withName: BCFTOOLS_FILTER {
         container = 'staphb/bcftools:1.20'
         ext.args = {'-e \'strlen(REF)>1 & strlen(REF)==strlen(ALT) & TYPE="snp"\' -Oz --write-index=tbi'}
