--- a/nextflow.config
+++ b/nextflow.config
@@ -232,7 +232,7 @@ process {
 		container = 'staphb/htslib:1.19'
 	}
     //see conf/base.config for the performance options of defined by nf-core standards
-	withName: 'BCFTOOLS_FILTER|BCFTOOLS_NORM' {
+	withName: 'BCFTOOLS_FILTER|BCFTOOLS_NORM|BCFTOOLS_VIEW' {
 		errorStrategy = 'retry'
 		maxRetries = 1
 		cpus	=	{ check_max( 2 		* task.attempt, 'cpus' 		) 	}
