feat: CLIN-3610 introduce nf-core vep subworkflow

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -72,7 +72,6 @@ process {
 
     withName: ENSEMBLVEP_VEP {
         container = 'ensemblorg/ensembl-vep:release_111.0' //sticking to v111 for now, but we should update this
-        publishDir = new_publish_dir([enabled: true])
         def args_list =  [
             "--offline",
             "--format vcf",
@@ -92,12 +91,12 @@ process {
         ext.prefix =  {"variants.${meta.id}.vep"}
     }
 
-    // To publish the vep index file in the same output folder as the vep output
-    withName: 'vep_tabix' {
-        publishDir = new_publish_dir([
-            enabled: true,
-            path: { "${params.outdir}/ensemblvep" }
-        ])
+    withName: '.*VCF_ANNOTATE_ENSEMBLVEP.*' {
+        publishDir = new_publish_dir([enabled: true, path: { "${params.outdir}/ensemblvep" }])
+    }
+
+    withName: TABIX_TABIX {
+        container = 'staphb/htslib:1.20'
     }
 
     withName: 'splitMultiAllelics' {
