--- a/nextflow.config
+++ b/nextflow.config
@@ -228,9 +228,6 @@ process {
 	withName: 'variantRecalibratorSNP|variantRecalibratorIndel|applyVQSRIndel|applyVQSRSNP|gatherVCF' {
 		container = 'broadinstitute/gatk:4.5.0.0'
 	}
-	withName: tabix {
-		container = 'staphb/htslib:1.19'
-	}
     //see conf/base.config for the performance options of defined by nf-core standards
 	withName: 'BCFTOOLS_FILTER|BCFTOOLS_NORM|BCFTOOLS_VIEW' {
 		errorStrategy = 'retry'
@@ -280,7 +277,7 @@ process {
 		disk	=	{ check_max( 30.GB	* task.attempt, 'disk'		)	}
 		time	=	{ check_max( 10.h	* task.attempt, 'time'		)	}
 	}
-	withName: 'tabix' {
+	withName: 'TABIX_TABIX' {
 		errorStrategy = 'retry'
 		maxRetries = 2
 		cpus	=	{ check_max( 2		* task.attempt, 'cpus'		) 	}
