feat: CLIN-3713 allow exomiser to restart from vep

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -68,6 +68,7 @@ process {
             enabled: true,
             pattern: 'results/*{vcf.gz,vcf.gz.tbi,tsv,json,html}'
         ])
+        ext.args = { "--output-filename=${meta.id}.exomiser" }
     }
 
     withName: ENSEMBLVEP_VEP {
