--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,7 @@ params {
     exomiser_analysis_wgs = "${projectDir}/assets/exomiser/default_exomiser_WGS_analysis.yml"
     exomiser_local_frequency_path = null
     exomiser_local_frequency_index_path = null
+    exomiser_start_from_vep = false
 
 	//Process-specific parameters
     exclude_mnps = true
