Changing prefix of VEP output to snv.vep

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -89,7 +89,7 @@ process {
             "--fields \"Allele,Consequence,IMPACT,SYMBOL,Feature_type,Gene,PICK,Feature,EXON,BIOTYPE,INTRON,HGVSc,HGVSp,STRAND,CDS_position,cDNA_position,Protein_position,Amino_acids,Codons,VARIANT_CLASS,HGVSg,CANONICAL,RefSeq\""
         ]
         ext.args = args_list.join(" ")
-        ext.prefix =  {"variants.${meta.id}.vep"}
+        ext.prefix =  {"variants.${meta.id}.snv.vep"}
     }
 
     withName: '.*VCF_ANNOTATE_ENSEMBLVEP.*' {
